Update generated timestamp and usage instructions

--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -16,23 +16,20 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-09-30 20:37:32 UTC\n",
+    "*   **Generated:** 2025-09-30 20:54:06 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
     "\n",
-    "1.  **Run Initial Cells:** Execute the cells in sections 1 through 5 to install libraries, configure the connection, and display the interactive grid below.\n",
-    "2.  **Choose Your Data Source (Section 3):**\n",
-    "    *   By default, the notebook loads **sample data** for safe testing. You can edit this data and test the \"Save\" functionality without affecting the live table (the save will be simulated).\n",
-    "    *   To edit the **live Databricks table**, go to the cell in Section 3, comment out the `df = generate_realistic_sample_data()` line, and uncomment the `df = load_data_from_databricks(...)` line. Then, re-run that cell.\n",
-    "3.  **Edit Data in the Grid:**\n",
+    "1.  **Run All Cells:** Click \"Run All\" to install libraries, configure the connection, and display the interactive grid below, which will be populated with live data.\n",
+    "2.  **Edit Data in the Grid:**\n",
     "    *   **Text/Date/Dropdowns:** Double-click a cell in an editable column (`Status`, `Product`, `start_date`, `Callouts`) to activate the editor.\n",
     "    *   **Multi-Select (`release_labels`):** Double-click a cell in the `release_labels` column. A popup with checkboxes will appear. Select or deselect items and click outside the popup to confirm.\n",
     "    *   **Multi-Line Text (`Callouts`):** Double-click a cell. A larger text box will appear. You can use `Enter` to create new lines. Click outside the box to finish.\n",
-    "4.  **Save Your Changes:**\n",
+    "3.  **Save Your Changes:**\n",
     "    *   After making all your edits, you **MUST** click the green **\"Save Changes\"** button.\n",
     "    *   This action takes all your changes from the grid and applies them to the live Databricks table using a `MERGE` command. You will see a confirmation message and the SQL command that was executed in the output area.\n",
-    "5.  **Refresh Data:**\n",
+    "4.  **Refresh Data:**\n",
     "    *   Click the blue **\"Refresh Data\"** button to discard any unsaved changes in the grid and reload the latest data from the Databricks table."
    ]
   },
@@ -104,7 +101,7 @@
    "source": [
     "## 3. Data Loading and Sample Data Generation\n",
     "\n",
-    "This section contains two functions: one to generate sample data for quick testing, and one to load the actual data from your Databricks table. By default, the sample data is used."
+    "This section contains two functions: one to generate sample data for quick testing, and one to load the actual data from your Databricks table. By default, the live data is used."
    ]
   },
   {
@@ -150,10 +147,10 @@
     "\n",
     "# --- CHOOSE DATA SOURCE --- #\n",
     "# Use sample data for testing\n",
-    "df = generate_realistic_sample_data()\n",
+    "# df = generate_realistic_sample_data()\n",
     "\n",
-    "# Uncomment the line below to use your actual Databricks table\n",
-    "# df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)"
+    "# Use your actual Databricks table\n",
+    "df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)"
    ]
   },
   {
@@ -279,9 +276,9 @@
     "    },\n",
     "    'enableCellChangeFlash': True,\n",
     "    'undoRedoCellEditing': True,\n",
-    "    'stopEditingWhenCellsLoseFocus': True, // Crucial for sync reliability\n",
+    "    'stopEditingWhenCellsLoseFocus': True,\n",
     "    'components': {\n",
-    "        'MultiSelectCellEditor': Javascript(custom_multi_select_editor_js)\n",
+    "        'MultiSelectCellEditor': custom_multi_select_editor_js\n",
     "    }\n",
     "}\n",
     "\n",
@@ -290,7 +287,7 @@
     "    grid_options=grid_options,\n",
     "    height=500,\n",
     "    width='100%',\n",
-    "    theme='ag-theme-alpine',\n",
+    "    theme='ag-theme-balham',\n",
     "    quick_filter=True,\n",
     "    show_toggle_edit=True,\n",
     "    sync_on_edit=False, # Disable auto-sync; we use a manual save button\n",
