Remove comments from cellEditor definitions

--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -233,7 +233,7 @@
     "            'headerName': 'Release Labels',\n",
     "            'field': 'release_labels',\n",
     "            'editable': True,\n",
-    "            'cellEditor': 'MultiSelectCellEditor', // Our custom multi-select editor\n",
+    "            'cellEditor': 'MultiSelectCellEditor',
     "            'cellEditorParams': {\n",
     "                'values': [\"Engine\", \"Global Tools\", \"Hotfix\", \"ModelBuilder\", \"Rating Tools\", \"Reinsurance\", \"Templates\", \"UI/UX \", \"Waterfalls\", \"AI\"]\n",
     "            },\n",
@@ -243,10 +243,10 @@
     "            'headerName': 'Callouts',\n",
     "            'field': 'Callouts',\n",
     "            'editable': True,\n",
-    "            'cellEditor': 'agLargeTextCellEditor', // Supports multi-line input\n",
+    "            'cellEditor': 'agLargeTextCellEditor',
     "            'cellEditorParams': {'rows': 5, 'cols': 40},\n",
-    "            'cellStyle': {'white-space': 'pre-wrap'}, // Ensures line breaks are displayed in the grid\n",
-    "            'autoHeight': True, // Adjusts row height to fit content\n",
+    "            'cellStyle': {'white-space': 'pre-wrap'},
+    "            'autoHeight': True,
     "            'width': 350\n",
     "        }\n",
     "    ]\n"
