--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -16,7 +16,7 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-09-30 20:54:06 UTC\n",
+    "*   **Generated:** 2025-09-30 21:05:42 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
@@ -63,7 +63,7 @@
     "\n",
     "from ipyaggrid import Grid\n",
     "from ipywidgets import Button, HBox, VBox, HTML, Output\n",
-    "from IPython.display import display, Javascript\n",
+    "from IPython.display import display\n",
     "\n",
     "# The SparkSession is automatically available in a Databricks notebook environment\n",
     "from pyspark.sql import SparkSession\n",
@@ -233,7 +233,7 @@
     "            'headerName': 'Release Labels',\n",
     "            'field': 'release_labels',\n",
     "            'editable': True,\n",
-    "            'cellEditor': 'MultiSelectCellEditor',
+    "            'cellEditor': 'MultiSelectCellEditor',\n",
     "            'cellEditorParams': {\n",
     "                'values': [\"Engine\", \"Global Tools\", \"Hotfix\", \"ModelBuilder\", \"Rating Tools\", \"Reinsurance\", \"Templates\", \"UI/UX \", \"Waterfalls\", \"AI\"]\n",
     "            },\n",
@@ -243,10 +243,10 @@
     "            'headerName': 'Callouts',\n",
     "            'field': 'Callouts',\n",
     "            'editable': True,\n",
-    "            'cellEditor': 'agLargeTextCellEditor',
+    "            'cellEditor': 'agLargeTextCellEditor',\n",
     "            'cellEditorParams': {'rows': 5, 'cols': 40},\n",
-    "            'cellStyle': {'white-space': 'pre-wrap'},
-    "            'autoHeight': True,
+    "            'cellStyle': {'white-space': 'pre-wrap'},\n",
+    "            'autoHeight': True,\n",
     "            'width': 350\n",
     "        }\n",
     "    ]\n"
