--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -16,7 +16,7 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-09-30 21:05:42 UTC\n",
+    "*   **Generated:** 2025-09-30 21:21:59 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
@@ -90,9 +90,8 @@
     "TABLE_FQN = f\"{CATALOG}.{SCHEMA}.{TABLE}\"\n",
     "\n",
     "# Define all columns you want to display in the grid\n",
-    "# Assuming 'id' is the primary key and 'release_name' exists for context\n",
-    "COLUMNS_TO_DISPLAY = [\"id\", \"release_name\", \"Status\", \"Product\", \"start_date\", \"release_labels\", \"Callouts\"]\n",
-    "PRIMARY_KEY = \"id\""
+    "COLUMNS_TO_DISPLAY = [\"surrogate_key\", \"title\", \"Status\", \"Product\", \"start_date\", \"release_labels\", \"Callouts\"]\n",
+    "PRIMARY_KEY = \"surrogate_key\""
    ]
   },
   {
@@ -117,8 +116,8 @@
     "    labels_opts = [\"Engine\", \"Global Tools\", \"Hotfix\", \"ModelBuilder\", \"Rating Tools\", \"Reinsurance\", \"Templates\", \"UI/UX \", \"Waterfalls\", \"AI\"]\n",
     "    \n",
     "    data = {\n",
-    "        'id': range(101, 111),\n",
-    "        'release_name': [f'2025.Q{i} Release' for i in range(1, 11)],\n",
+    "        'surrogate_key': [f'sk_{i}' for i in range(101, 111)],\n",
+    "        'title': [f'Sample Release Title {i}' for i in range(1, 11)],\n",
     "        'Status': np.random.choice(status_opts, 10),\n",
     "        'Product': np.random.choice(product_opts, 10),\n",
     "        'start_date': [(datetime.now() - timedelta(days=i*30)).strftime('%Y-%m-%d') for i in range(10)],\n",
@@ -142,7 +141,7 @@
     "        print(\"Data loaded successfully.\")\n",
     "        return df_pandas\n",
     "    except Exception as e:\n",
-    "        print(f\"ERROR: Could not load data from {table_fqn}. Please check table name and permissions. Error: {e}\")\n",
+    "        print(f\"ERROR: Could not load data from {table_fqn}. Please check table name, column names, and permissions. Error: {e}\")\n",
     "        return pd.DataFrame(columns=columns)\n",
     "\n",
     "# --- CHOOSE DATA SOURCE --- #\n",
@@ -204,8 +203,8 @@
     "def configure_grid_columns():\n",
     "    \"\"\"Configure grid columns with appropriate editors and settings for the metarisk table.\"\"\"\n",
     "    return [\n",
-    "        {'headerName': 'ID', 'field': 'id', 'editable': False, 'width': 80},\n",
-    "        {'headerName': 'Release Name', 'field': 'release_name', 'editable': False, 'width': 180},\n",
+    "        {'headerName': 'SK', 'field': 'surrogate_key', 'editable': False, 'width': 120},\n",
+    "        {'headerName': 'Title', 'field': 'title', 'editable': False, 'width': 180},\n",
     "        {\n",
     "            'headerName': 'Status',\n",
     "            'field': 'Status',\n",
