Update notebook for ipyaggrid and Databricks runtime

--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Interactive Editor for 'metarisk_releases_dim'\n",
     "\n",
-    "This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table. **This version is optimized for Databricks Runtime 16.4 LTS.**"
+    "This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table. **This version uses the latest `ipyaggrid` library and is optimized for Databricks Runtime 16.4 LTS.**"
    ]
   },
   {
@@ -16,7 +16,7 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-09-30 21:21:59 UTC\n",
+    "*   **Generated:** 2025-09-30 23:01:56 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
@@ -46,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Installs ipyaggrid and uses the pandas version native to the DBR 16.4 LTS runtime.\n",
-    "%pip install ipyaggrid==0.3.0"
+    "# Installs the latest version of ipyaggrid, compatible with DBR 16.4 LTS.\n",
+    "%pip install ipyaggrid==0.5.4"
    ]
   },
   {
@@ -301,7 +301,7 @@
    "source": [
     "## 6. Handle Data Changes and Save to Databricks\n",
     "\n",
-    "This section implements the robust \"manual save\" pattern. When the user clicks \"Save Changes\", we stop all editing, pull the complete dataset from the grid, and then perform the `MERGE` operation against your live table."
+    "This section implements the robust \"manual save\" pattern. When the user clicks \"Save Changes\", we pull the complete dataset from the grid and then perform the `MERGE` operation against your live table."
    ]
   },
   {
@@ -320,14 +320,9 @@
     "        output_area.clear_output()\n",
     "        status_html.value = f\"<p style='color:blue'>Saving... Please wait.</p>\"\n",
     "        try:\n",
-    "            # 1. Stop any active editing in the grid (CRITICAL STEP)\n",
-    "            grid.js_code(\"gridOptions.api.stopEditing()\");\n",
-    "            \n",
-    "            # 2. Add a small delay for the front-end to process the change\n",
-    "            time.sleep(0.5)\n",
-    "            \n",
-    "            # 3. Get the updated data directly from the grid's front-end state\n",
-    "            updated_df = grid.grid_data_out\n",
+    "            # Get the updated data directly from the grid's front-end state.\n",
+    "            # This method ensures that any active edits are completed and captured.\n",
+    "            updated_df = grid.get_grid_data()\n",
     "            \n",
     "            print(\"Data to be saved:\")\n",
     "            display(updated_df.head())\n",
@@ -370,7 +365,8 @@
     "        try:\n",
     "            refreshed_df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)\n",
     "            grid.grid_data = refreshed_df\n",
-    "            grid.js_code(\"gridOptions.api.setRowData(gridOptions.rowData)\") # Safely reloads data in the grid\n",
+    "            # Safely reloads data in the grid\n",
+    "            grid.update_grid()\n",
     "            status_html.value = f\"<p style='color:green'>Grid data refreshed at {datetime.now().strftime('%H:%M:%S')}</p>\"\n",
     "        except Exception as e:\n",
     "            error_message = f\"Error refreshing data: {str(e)}\"\n",
