--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -16,12 +16,12 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-09-30 23:01:56 UTC\n",
+    "*   **Generated:** 2025-09-30 23:15:30 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
     "\n",
-    "1.  **Run All Cells:** Click \"Run All\" to install libraries, configure the connection, and display the interactive grid below, which will be populated with live data.\n",
+    "1.  **Run All Cells:** Click \"Run All\" to install libraries, restart the Python kernel (this is required), configure the connection, and display the interactive grid below, which will be populated with live data.\n",
     "2.  **Edit Data in the Grid:**\n",
     "    *   **Text/Date/Dropdowns:** Double-click a cell in an editable column (`Status`, `Product`, `start_date`, `Callouts`) to activate the editor.\n",
     "    *   **Multi-Select (`release_labels`):** Double-click a cell in the `release_labels` column. A popup with checkboxes will appear. Select or deselect items and click outside the popup to confirm.\n",
@@ -48,6 +48,17 @@
    "source": [
     "# Installs the latest version of ipyaggrid, compatible with DBR 16.4 LTS.\n",
     "%pip install ipyaggrid==0.5.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This command restarts the Python kernel to ensure the newly installed library is used.\n",
+    "# It is a required step after a %pip install command in Databricks.\n",
+    "dbutils.library.restartPython()"
    ]
   },
   {
@@ -321,7 +332,7 @@
     "        status_html.value = f\"<p style='color:blue'>Saving... Please wait.</p>\"\n",
     "        try:\n",
     "            # Get the updated data directly from the grid's front-end state.\n",
-    "            # This method ensures that any active edits are completed and captured.\n",
+    "            # This is the correct and most reliable method for this library version.\n",
     "            updated_df = grid.get_grid_data()\n",
     "            \n",
     "            print(\"Data to be saved:\")\n",
