Update generated timestamp and grid data retrieval

--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -16,7 +16,7 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-09-30 23:15:30 UTC\n",
+    "*   **Generated:** 2025-10-01 01:00:57 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
@@ -333,7 +333,7 @@
     "        try:\n",
     "            # Get the updated data directly from the grid's front-end state.\n",
     "            # This is the correct and most reliable method for this library version.\n",
-    "            updated_df = grid.get_grid_data()\n",
+    "            updated_df = grid.grid_data_out['grid']\n",
     "            \n",
     "            print(\"Data to be saved:\")\n",
     "            display(updated_df.head())\n",
