--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interactive Editor for 'metarisk_releases_dim'\n",
+    "# Interactive Editor for 'metarisk_releases_dim' (Simplified)\n",
     "\n",
-    "This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table. **This version uses the latest `ipyaggrid` library and is optimized for Databricks Runtime 16.4 LTS.**"
+    "This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table. **This simplified version uses free-text entry for all editable fields and is optimized for Databricks Runtime 16.4 LTS.**"
    ]
   },
   {
@@ -16,16 +16,17 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-10-01 01:45:11 UTC\n",
+    "*   **Generated:** 2025-10-01 01:39:47 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
     "\n",
     "1.  **Run All Cells:** Click \"Run All\" to install libraries, restart the Python kernel (this is required), configure the connection, and display the interactive grid below, which will be populated with live data.\n",
     "2.  **Edit Data in the Grid:**\n",
-    "    *   **Text/Date/Dropdowns:** Double-click a cell in an editable column (`Status`, `Product`, `start_date`, `Callouts`) to activate the editor.\n",
-    "    *   **Multi-Select (`release_labels`):** Double-click a cell in the `release_labels` column. A popup with checkboxes will appear. Select or deselect items and click outside the popup to confirm.\n",
-    "    *   **Multi-Line Text (`Callouts`):** Double-click a cell. A larger text box will appear. You can use `Enter` to create new lines. Click outside the box to finish.\n",
+    "    *   Double-click any cell in an editable column to activate the text editor.\n",
+    "    *   For `start_date`, please enter the date in **`YYYY-MM-DD`** format.\n",
+    "    *   For `release_labels`, please enter values separated by a **semicolon (`;`)** with no spaces.\n",
+    "    *   For `Callouts`, you can use `Enter` to create new lines in the editor.\n",
     "3.  **Save Your Changes:**\n",
     "    *   After making all your edits, you **MUST** click the green **\"Save Changes\"** button.\n",
     "    *   This action takes all your changes from the grid and applies them to the live Databricks table using a `MERGE` command. You will see a confirmation message and the SQL command that was executed in the output area.\n",
@@ -74,7 +75,7 @@
     "\n",
     "from ipyaggrid import Grid\n",
     "from ipywidgets import Button, HBox, VBox, HTML, Output\n",
-    "from IPython.display import display, Javascript\n",
+    "from IPython.display import display\n",
     "\n",
     "# The SparkSession is automatically available in a Databricks notebook environment\n",
     "from pyspark.sql import SparkSession\n",
@@ -167,51 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Configure Grid with Custom Multi-Select Editor\n",
-    "\n",
-    "Here we define the behavior of each column in the grid. The custom JavaScript for the multi-select editor is registered with the browser first."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "custom_multi_select_editor_js = \"\"\"\n",
-    "class MultiSelectCellEditor {\n",
-    "    init(params) {\n",
-    "        this.values = params.values;\n",
-    "        this.eGui = document.createElement('div');\n",
-    "        this.eGui.style.backgroundColor = 'white';\n",
-    "        this.eGui.style.border = '1px solid #aaa';\n",
-    "        this.eGui.style.padding = '5px';\n",
-    "        this.eGui.style.boxShadow = '2px 2px 5px rgba(0,0,0,0.1)';\n",
-    "        const currentValues = params.value ? params.value.split(';') : [];\n",
-    "        this.values.forEach(value => {\n",
-    "            const label = document.createElement('label');\n",
-    "            label.style.display = 'block';\n",
-    "            const checkbox = document.createElement('input');\n",
-    "            checkbox.type = 'checkbox';\n",
-    "            checkbox.value = value;\n",
-    "            checkbox.checked = currentValues.includes(value);\n",
-    "            label.appendChild(checkbox);\n",
-    "            label.appendChild(document.createTextNode(' ' + value));\n",
-    "            this.eGui.appendChild(label);\n",
-    "        });\n",
-    "    }\n",
-    "    getGui() { return this.eGui; }\n",
-    "    afterGuiAttached() { this.eGui.focus(); }\n",
-    "    getValue() {\n",
-    "        const selected = this.eGui.querySelectorAll('input[type=\"checkbox\"]:checked');\n",
-    "        return Array.from(selected).map(cb => cb.value).join(';');\n",
-    "    }\n",
-    "    isPopup() { return true; }\n",
-    "    destroy() {}\n",
-    "}\n",
-    "\"\"\"\n",
-    "# CRITICAL STEP: Register the custom JavaScript component with the browser's frontend.\n",
-    "display(Javascript(custom_multi_select_editor_js))"
+    "## 4. Configure Grid Columns (Simplified)"
    ]
   },
   {
@@ -244,18 +201,13 @@
     "        {\n",
     "            'headerName': 'Start Date',\n",
     "            'field': 'start_date',\n",
-    "            'editable': True,\n",
-    "            'cellEditor': 'agDateCellEditor',\n",
+    "            'editable': True, # Simplified to free-text\n",
     "            'width': 130\n",
     "        },\n",
     "        {\n",
     "            'headerName': 'Release Labels',\n",
     "            'field': 'release_labels',\n",
-    "            'editable': True,\n",
-    "            'cellEditor': 'MultiSelectCellEditor',\n",
-    "            'cellEditorParams': {\n",
-    "                'values': [\"Engine\", \"Global Tools\", \"Hotfix\", \"ModelBuilder\", \"Rating Tools\", \"Reinsurance\", \"Templates\", \"UI/UX \", \"Waterfalls\", \"AI\"]\n",
-    "            },\n",
+    "            'editable': True, # Simplified to free-text\n",
     "            'width': 250\n",
     "        },\n",
     "        {\n",
@@ -286,7 +238,6 @@
    "source": [
     "column_defs = configure_grid_columns()\n",
     "\n",
-    "# Note: The 'components' key is removed as the JS is now pre-registered.\n",
     "grid_options = {\n",
     "    'columnDefs': column_defs,\n",
     "    'defaultColDef': {\n",
@@ -307,7 +258,7 @@
     "    theme='ag-theme-balham',\n",
     "    quick_filter=True,\n",
     "    show_toggle_edit=True,\n",
-    "    sync_on_edit=True, # Re-enabled for better data synchronization\n",
+    "    sync_on_edit=True, \n",
     "    export_csv=True,\n",
     "    export_excel=True\n",
     ")"
@@ -338,9 +289,8 @@
     "        output_area.clear_output()\n",
     "        status_html.value = f\"<p style='color:blue'>Saving... Please wait.</p>\"\n",
     "        try:\n",
-    "            # CORRECTED: Get the updated data directly from the grid's data_out property.\n",
-    "            # This is the correct and most reliable method for this library version.\n",
-    "            updated_df = grid.grid_data_out\n",
+    "            # CORRECTED: Get the updated data from the 'grid' key of the grid_data_out dictionary.\n",
+    "            updated_df = grid.grid_data_out['grid']\n",
     "            \n",
     "            print(\"Data to be saved:\")\n",
     "            display(updated_df.head())\n",
