Simplify interactive editor for metarisk releases
This notebook provides a simplified user interface for editing records in the 'metarisk_releases_dim' table, focusing on free-text entry for all fields. It includes updates to usage instructions and removes advanced editor features.

--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interactive Editor for 'metarisk_releases_dim' (Enhanced)\n",
+    "# Interactive Editor for 'metarisk_releases_dim' (Simplified)\n",
     "\n",
-    "This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table. **This version includes advanced editors (multi-select, date picker) and is optimized for Databricks Runtime 16.4 LTS.**"
+    "This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table. **This simplified version uses free-text entry for all editable fields and is optimized for Databricks Runtime 16.4 LTS.**"
    ]
   },
   {
@@ -16,19 +16,20 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-10-01 02:24:08 UTC\n",
+    "*   **Generated:** 2025-10-01 02:10:03 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
     "\n",
     "1.  **Run All Cells:** Click \"Run All\" to install libraries, restart the Python kernel (this is required), configure the connection, and display the interactive grid below, which will be populated with live data.\n",
     "2.  **Edit Data in the Grid:**\n",
-    "    *   **Dropdowns:** Double-click a cell in the `Status` or `Product` columns to see a dropdown.\n",
-    "    *   **Date Picker:** Double-click a cell in the `start_date` column to use a calendar.\n",
-    "    *   **Multi-Select (`release_labels`):** Double-click a cell in the `release_labels` column. A popup with checkboxes will appear. Select, deselect, or clear items and click outside the popup to confirm.\n",
-    "    *   **Multi-Line Text (`Callouts`):** Double-click a cell in the `Callouts` column. A larger text box will appear. You can use `Enter` to create new lines.\n",
+    "    *   Double-click any cell in an editable column to activate the text editor.\n",
+    "    *   For `start_date`, please enter the date in **`YYYY-MM-DD`** format.\n",
+    "    *   For `release_labels`, please enter values separated by a **semicolon (`;`)** with no spaces.\n",
+    "    *   For `Callouts`, you can use `Enter` to create new lines in the editor.\n",
     "3.  **Save Your Changes:**\n",
     "    *   After making all your edits, you **MUST** click the green **\"Save Changes\"** button.\n",
+    "    *   This action takes all your changes from the grid and applies them to the live Databricks table using a `MERGE` command. You will see a confirmation message and the SQL command that was executed in the output area.\n",
     "4.  **Refresh Data:**\n",
     "    *   Click the blue **\"Refresh Data\"** button to discard any unsaved changes in the grid and reload the latest data from the Databricks table."
    ]
@@ -120,6 +121,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def generate_realistic_sample_data():\n",
+    "    \"\"\"Generates a sample DataFrame that mimics your table for testing purposes.\"\"\"\n",
+    "    status_opts = [\"On-Track\", \"At-Risk\", \"Off-Track\", \"Complete\", \"Not Started\", \"Blocked\"]\n",
+    "    product_opts = [\"MR Desktop\", \"Data\", \"MR Online\", \"MR Live\", \"Support\", \"MR Rate\", \"AI\"]\n",
+    "    labels_opts = [\"Engine\", \"Global Tools\", \"Hotfix\", \"ModelBuilder\", \"Rating Tools\", \"Reinsurance\", \"Templates\", \"UI/UX \", \"Waterfalls\", \"AI\"]\n",
+    "    \n",
+    "    data = {\n",
+    "        'surrogate_key': [f'sk_{i}' for i in range(101, 111)],\n",
+    "        'title': [f'Sample Release Title {i}' for i in range(1, 11)],\n",
+    "        'Status': np.random.choice(status_opts, 10),\n",
+    "        'Product': np.random.choice(product_opts, 10),\n",
+    "        'start_date': [(datetime.now() - timedelta(days=i*30)).strftime('%Y-%m-%d') for i in range(10)],\n",
+    "        'release_labels': [';'.join(np.random.choice(labels_opts, size=np.random.randint(1, 4), replace=False)) for _ in range(10)],\n",
+    "        'Callouts': [f'Key callout for release {i}.\\n- Point 1\\n- Point 2' for i in range(1, 11)]\n",
+    "    }\n",
+    "    return pd.DataFrame(data)\n",
+    "\n",
     "def load_data_from_databricks(table_fqn, columns):\n",
     "    \"\"\"Loads data from the specified Databricks table into a pandas DataFrame.\"\"\"\n",
     "    print(f\"Loading data from {table_fqn}...\")\n",
@@ -130,10 +148,7 @@
     "        \n",
     "        # Ensure date columns are in string format for the grid editor\n",
     "        if 'start_date' in df_pandas.columns:\n",
-    "            # Coerce to datetime and format, handling potential errors\n",
-    "            df_pandas['start_date'] = pd.to_datetime(df_pandas['start_date'], errors='coerce').dt.strftime('%Y-%m-%d')\n",
-    "            # Fill any NaT values that may have resulted from coerce\n",
-    "            df_pandas['start_date'] = df_pandas['start_date'].fillna('')\n",
+    "            df_pandas['start_date'] = pd.to_datetime(df_pandas['start_date']).dt.strftime('%Y-%m-%d')\n",
     "        \n",
     "        print(\"Data loaded successfully.\")\n",
     "        return df_pandas\n",
@@ -142,6 +157,10 @@
     "        return pd.DataFrame(columns=columns)\n",
     "\n",
     "# --- CHOOSE DATA SOURCE --- #\n",
+    "# Use sample data for testing\n",
+    "# df = generate_realistic_sample_data()\n",
+    "\n",
+    "# Use your actual Databricks table\n",
     "df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)"
    ]
   },
@@ -149,70 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Configure Grid Columns with Custom Editors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This JavaScript defines the custom multi-select checkbox editor.\n",
-    "# It is passed to the Grid object and evaluated in the browser.\n",
-    "custom_js = \"\"\"\n",
-    "class MultiSelectCellEditor {\n",
-    "    init(params) {\n",
-    "        this.params = params;\n",
-    "        // ADAPTED: Split the semicolon-separated string into an array\n",
-    "        this.value = params.value ? String(params.value).split(';') : [];\n",
-    "\n",
-    "        this.eGui = document.createElement('div');\n",
-    "        this.eGui.style.backgroundColor = 'white';\n",
-    "        this.eGui.style.border = '1px solid #ccc';\n",
-    "        this.eGui.style.padding = '8px';\n",
-    "        this.eGui.style.maxHeight = '200px';\n",
-    "        this.eGui.style.overflowY = 'auto';\n",
-    "\n",
-    "        const values = params.values || []; \n",
-    "        values.forEach(option => {\n",
-    "            const container = document.createElement('div');\n",
-    "            const checkbox = document.createElement('input');\n",
-    "            checkbox.type = 'checkbox';\n",
-    "            checkbox.id = params.colDef.field + '_' + option;\n",
-    "            checkbox.value = option;\n",
-    "            if (this.value.includes(option)) {\n",
-    "                checkbox.checked = true;\n",
-    "            }\n",
-    "\n",
-    "            const label = document.createElement('label');\n",
-    "            label.htmlFor = checkbox.id;\n",
-    "            label.innerText = ' ' + option;\n",
-    "            \n",
-    "            checkbox.addEventListener('change', () => {\n",
-    "                if (checkbox.checked) {\n",
-    "                    this.value.push(option);\n",
-    "                } else {\n",
-    "                    this.value = this.value.filter(v => v !== option);\n",
-    "                }\n",
-    "            });\n",
-    "            \n",
-    "            container.appendChild(checkbox);\n",
-    "            container.appendChild(label);\n",
-    "            this.eGui.appendChild(container);\n",
-    "        });\n",
-    "    }\n",
-    "\n",
-    "    getGui() { return this.eGui; }\n",
-    "    \n",
-    "    getValue() { \n",
-    "        // ADAPTED: Join the array back into a semicolon-separated string for the backend\n",
-    "        return this.value.join(';');\n",
-    "    }\n",
-    "\n",
-    "    isPopup() { return true; }\n",
-    "}\n",
-    "\"\"\""
+    "## 4. Configure Grid Columns (Simplified)"
    ]
   },
   {
@@ -245,20 +201,13 @@
     "        {\n",
     "            'headerName': 'Start Date',\n",
     "            'field': 'start_date',\n",
-    "            'editable': True,\n",
-    "            'cellEditor': 'agDateCellEditor', # Re-enabled the date picker\n",
+    "            'editable': True, # Simplified to free-text\n",
     "            'width': 130\n",
     "        },\n",
     "        {\n",
     "            'headerName': 'Release Labels',\n",
     "            'field': 'release_labels',\n",
-    "            'editable': True,\n",
-    "            'cellEditor': 'MultiSelectCellEditor', # Reference the custom editor\n",
-    "            'cellEditorParams': {\n",
-    "                'values': [\"Engine Work\", \"Global Tools\", \"Hotfix\", \"Modelbuilder\", \"Rating Tools\", \"Reinsurance\", \"Templates\", \"UI/UX\", \"Waterfalls\"]\n",
-    "            },\n",
-    "            # This makes the display prettier (e.g., \"Engine, UI/UX\")\n",
-    "            'valueFormatter': \"params.value ? params.value.replace(/;/g, ', ') : ''\",\n",
+    "            'editable': True, # Simplified to free-text\n",
     "            'width': 250\n",
     "        },\n",
     "        {\n",
@@ -304,7 +253,6 @@
     "grid = Grid(\n",
     "    grid_data=df,\n",
     "    grid_options=grid_options,\n",
-    "    js_helpers_custom=custom_js, # Pass the custom JS to the grid\n",
     "    height=500,\n",
     "    width='100%',\n",
     "    theme='ag-theme-balham',\n",
@@ -383,7 +331,7 @@
     "        status_html.value = f\"<p style='color:blue'>Refreshing data from {TABLE_FQN}...</p>\"\n",
     "        try:\n",
     "            refreshed_df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)\n",
-    "            # Use update_grid_data with a positional argument.\n",
+    "            # CORRECTED: Use update_grid_data with a positional argument.\n",
     "            grid.update_grid_data(refreshed_df)\n",
     "            status_html.value = f\"<p style='color:green'>Grid data refreshed at {datetime.now().strftime('%H:%M:%S')}</p>\"\n",
     "        except Exception as e:\n",
