--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interactive Editor for 'metarisk_releases_dim' (Simplified)\n",
+    "# Interactive Editor for 'metarisk_releases_dim' (Simplified with Tooltip)\n",
     "\n",
-    "This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table. **This simplified version uses free-text entry for all editable fields and is optimized for Databricks Runtime 16.4 LTS.**"
+    "This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table. **This simplified version uses free-text entry and is optimized for Databricks Runtime 16.4 LTS.**"
    ]
   },
   {
@@ -16,7 +16,7 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-10-01 02:10:03 UTC\n",
+    "*   **Generated:** 2025-10-01 02:42:30 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
@@ -25,11 +25,10 @@
     "2.  **Edit Data in the Grid:**\n",
     "    *   Double-click any cell in an editable column to activate the text editor.\n",
     "    *   For `start_date`, please enter the date in **`YYYY-MM-DD`** format.\n",
-    "    *   For `release_labels`, please enter values separated by a **semicolon (`;`)** with no spaces.\n",
+    "    *   For `release_labels`, hover over the column header for suggested values. Enter them separated by a **semicolon (`;`)** with no spaces.\n",
     "    *   For `Callouts`, you can use `Enter` to create new lines in the editor.\n",
     "3.  **Save Your Changes:**\n",
     "    *   After making all your edits, you **MUST** click the green **\"Save Changes\"** button.\n",
-    "    *   This action takes all your changes from the grid and applies them to the live Databricks table using a `MERGE` command. You will see a confirmation message and the SQL command that was executed in the output area.\n",
     "4.  **Refresh Data:**\n",
     "    *   Click the blue **\"Refresh Data\"** button to discard any unsaved changes in the grid and reload the latest data from the Databricks table."
    ]
@@ -121,23 +120,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_realistic_sample_data():\n",
-    "    \"\"\"Generates a sample DataFrame that mimics your table for testing purposes.\"\"\"\n",
-    "    status_opts = [\"On-Track\", \"At-Risk\", \"Off-Track\", \"Complete\", \"Not Started\", \"Blocked\"]\n",
-    "    product_opts = [\"MR Desktop\", \"Data\", \"MR Online\", \"MR Live\", \"Support\", \"MR Rate\", \"AI\"]\n",
-    "    labels_opts = [\"Engine\", \"Global Tools\", \"Hotfix\", \"ModelBuilder\", \"Rating Tools\", \"Reinsurance\", \"Templates\", \"UI/UX \", \"Waterfalls\", \"AI\"]\n",
-    "    \n",
-    "    data = {\n",
-    "        'surrogate_key': [f'sk_{i}' for i in range(101, 111)],\n",
-    "        'title': [f'Sample Release Title {i}' for i in range(1, 11)],\n",
-    "        'Status': np.random.choice(status_opts, 10),\n",
-    "        'Product': np.random.choice(product_opts, 10),\n",
-    "        'start_date': [(datetime.now() - timedelta(days=i*30)).strftime('%Y-%m-%d') for i in range(10)],\n",
-    "        'release_labels': [';'.join(np.random.choice(labels_opts, size=np.random.randint(1, 4), replace=False)) for _ in range(10)],\n",
-    "        'Callouts': [f'Key callout for release {i}.\\n- Point 1\\n- Point 2' for i in range(1, 11)]\n",
-    "    }\n",
-    "    return pd.DataFrame(data)\n",
-    "\n",
     "def load_data_from_databricks(table_fqn, columns):\n",
     "    \"\"\"Loads data from the specified Databricks table into a pandas DataFrame.\"\"\"\n",
     "    print(f\"Loading data from {table_fqn}...\")\n",
@@ -157,10 +139,6 @@
     "        return pd.DataFrame(columns=columns)\n",
     "\n",
     "# --- CHOOSE DATA SOURCE --- #\n",
-    "# Use sample data for testing\n",
-    "# df = generate_realistic_sample_data()\n",
-    "\n",
-    "# Use your actual Databricks table\n",
     "df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)"
    ]
   },
@@ -179,6 +157,9 @@
    "source": [
     "def configure_grid_columns():\n",
     "    \"\"\"Configure grid columns with appropriate editors and settings for the metarisk table.\"\"\"\n",
+    "    release_label_options = [\"Engine Work\", \"Global Tools\", \"Hotfix\", \"Modelbuilder\", \"Rating Tools\", \"Reinsurance\", \"Templates\", \"UI/UX\", \"Waterfalls\"]\n",
+    "    tooltip_text = f\"Enter values separated by a semicolon. Suggested: {', '.join(release_label_options)}\"\n",
+    "    \n",
     "    return [\n",
     "        {'headerName': 'SK', 'field': 'surrogate_key', 'editable': False, 'width': 120},\n",
     "        {'headerName': 'Title', 'field': 'title', 'editable': False, 'width': 180},\n",
@@ -202,12 +183,14 @@
     "            'headerName': 'Start Date',\n",
     "            'field': 'start_date',\n",
     "            'editable': True, # Simplified to free-text\n",
+    "            'headerTooltip': 'Enter date in YYYY-MM-DD format.',\n",
     "            'width': 130\n",
     "        },\n",
     "        {\n",
     "            'headerName': 'Release Labels',\n",
     "            'field': 'release_labels',\n",
     "            'editable': True, # Simplified to free-text\n",
+    "            'headerTooltip': tooltip_text, # Added tooltip for guidance\n",
     "            'width': 250\n",
     "        },\n",
     "        {\n",
@@ -331,11 +314,12 @@
     "        status_html.value = f\"<p style='color:blue'>Refreshing data from {TABLE_FQN}...</p>\"\n",
     "        try:\n",
     "            refreshed_df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)\n",
-    "            # CORRECTED: Use update_grid_data with a positional argument.\n",
+    "            # Use update_grid_data with a positional argument.\n",
     "            grid.update_grid_data(refreshed_df)\n",
     "            status_html.value = f\"<p style='color:green'>Grid data refreshed at {datetime.now().strftime('%H:%M:%S')}</p>\"\n",
     "        except Exception as e:\n",
     "            error_message = f\"Error refreshing data: {str(e)}\"\n",
+
     "            print(error_message)\n",
     "            status_html.value = f\"<p style='color:red'>{error_message}</p>\"\n",
     "\n",
